--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,18 @@
     </nav>
   </header>
   <main>
-    
+    <div class="search__container">
+      <input type="search" name="" id="movie-search" placeholder="search...">
+      <button class="search-button">Search</button>   
+    </div>
+    <div class="slider">
+      <div class="card">
+        <div class="card__title">Title</div>
+        <div class="card__img">poster</div>
+        <div class="card__year">1986</div>
+        <div class="card__rating">9.9</div>
+      </div>
+    </div>
   </main>
   <footer>
     by Alexey Teterin
