feat: load favs on start and handle favBtns clicks

--- a/src/index.html
+++ b/src/index.html
@@ -26,10 +26,13 @@
   <main>
     <div class="tab-content">
       <div class="tab-pane fade show active" role="tabpanel" data-id="movies">
-        <div class="slider">
+        <div class="slider movies">
         </div>
       </div>
-      <div class="tab-pane fade" role="tabpanel" data-id="favorites">Favorites</div>
+      <div class="tab-pane fade" role="tabpanel" data-id="favorites">
+        <div class="slider favorites">
+        </div>
+      </div>
       <div class="tab-pane fade" role="tabpanel" data-id="top250">Top 250</div>
     </div>
 
