feat: preload upcoming movies on start

--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
   <title>VideoBox</title>
 </head>
 
-<body>
+<body class="bg-light">
   <header>
     <h1>VideoBox<span class="film"></span></h1>
 
