--- a/src/index.html
+++ b/src/index.html
@@ -1,16 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
+<html class="bg-light bg-dark" lang="en">
 
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script>
+    const storage = JSON.parse(localStorage.VideoBox);
+    if (!storage | !storage.darkMode) document.querySelector('html').classList.remove('bg-dark');
+  </script>
   <title>VideoBox</title>
 </head>
 
-<body class="bg-light">
+<body>
   <header>
     <div class="form-check form-switch">
-      <input class="form-check-input" type="checkbox" id="nightSwitch" data-bs-toggle="tooltip" data-bs-trigger="hover" title="Turn off the lights">
+      <input class="form-check-input" type="checkbox" id="nightSwitch" data-bs-toggle="tooltip" data-bs-trigger="hover" title="Turn off the lights" checked>
       <label class="form-check-label" for="nightSwitch"></label>
     </div>
     <h1>VideoBox<span class="film"></span></h1>
@@ -47,11 +51,11 @@
           <div class="swiper-button-next"></div>
         </div>
       </div>
-      
+
       <div class="tab-pane fade" role="tabpanel" aria-labelledby="top250-tab" data-id="top250" data-bs-toggle="tab" id="top250">Top 250</div>
     </div>
   </main>
-  
+
   <footer>
     by Alexey Teterin
   </footer>
