feat: add footer links

--- a/src/index.html
+++ b/src/index.html
@@ -56,8 +56,13 @@
     </div>
   </main>
 
-  <footer>
-    by Alexey Teterin
+  <footer class="text-muted">
+    <div>
+      <a class="rsschool" href="https://rs.school/js/" target="_blank" rel="noreferrer"></a>
+    </div>
+    <div> &copy; 2021, coded by
+      <a class="link-secondary" href="https://github.com/AlexeyTeterin" target="_blank" rel="noreferrer">Alexey Teterin</a>
+    </div>
   </footer>
 </body>
 
