feat: add search spinner

--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,10 @@
 
     <div class="search__container">
       <input type="search" name="" id="movie-search" placeholder="..." class="form-control">
-      <button type="button" class="search-button btn btn-danger">Search</button>
+      <button type="button" class="search-button btn btn-danger">
+        <span class="spinner-border spinner-border-sm visually-hidden" role="status" aria-hidden="true"></span>
+        <span class="search-text">Search</span>
+      </button>
     </div>
   </header>
 
