feat: add settings button

--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,7 @@
       <input class="form-check-input" type="checkbox" id="nightSwitch" data-bs-toggle="tooltip" data-bs-trigger="hover" title="Turn off the lights">
       <label class="form-check-label" for="nightSwitch"></label>
     </div>
+    <div class="settings-button"></div>
     <h1><a href=".">VideoBox<span class="film"></span></a></h1>
     <div class="nav nav-tabs" id="nav" role="tablist">
       <a class="nav-link fw-bold ac active" role="tab" aria-controls="movies" aria-selected="true" href="#" id="movies-tab" data-bs-toggle="tab">Movies</a>
