--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script src="https://kit.fontawesome.com/b685af53a8.js" crossorigin="anonymous"></script>
   <script>
     const storage = JSON.parse(localStorage.VideoBox || null);
     if (!storage || !storage.darkMode) document.querySelector('html').classList.remove('bg-dark');
@@ -13,11 +14,15 @@
 
 <body>
   <header>
-    <div class="form-check form-switch">
-      <input class="form-check-input" type="checkbox" id="nightSwitch" data-bs-toggle="tooltip" data-bs-trigger="hover" title="Turn off the lights">
-      <label class="form-check-label" for="nightSwitch"></label>
-    </div>
     <div class="settings-button" id="settings"></div>
+    <div class="nightSwitch-container">
+      <input type="checkbox" class="checkbox" id="nightSwitch"/>
+      <label class="label" for="nightSwitch">
+          <i class="fas fa-sun"></i>
+          <i class="fas fa-moon"></i>
+          <div class="ball"></div>
+      </label>
+    </div>
     <h1><a href=".">VideoBox<span class="film"></span></a></h1>
     <div class="nav nav-tabs" id="nav" role="tablist">
       <a class="nav-link fw-bold ac active" role="tab" aria-controls="movies" aria-selected="true" href="#" id="movies-tab" data-bs-toggle="tab">Movies</a>
