feat: rating badge click => open movie on imdb

--- a/src/index.html
+++ b/src/index.html
@@ -131,6 +131,7 @@
     <div> &copy; 2021, coded by
       <a class="link-secondary" href="https://github.com/AlexeyTeterin" target="_blank" rel="noreferrer">Alexey Teterin</a>
     </div>
+    <a class="card__rating badge bg-warning text-dark" href="https://www.imdb.com/title/tt1838556" target="_blank">6.0</a>
   </footer>
 </body>
 
