fix: sooter, header styles fix: sorting in top101

--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
         <div class="ball"></div>
       </label>
     </div>
-    <h1><a href=".">VideoBox<span class="film"></span></a></h1>
+    <h1><a href=".">video<span class="film"></span><span class="text-danger">box</span></a></h1>
     <div class="nav nav-tabs" id="nav" role="tablist">
       <a class="nav-link fw-bold ac active" role="tab" aria-controls="movies" aria-selected="true" href="#" id="movies-tab" data-bs-toggle="tab">Movies</a>
       <a class="nav-link fw-bold" role="tab" aria-controls="favorites" aria-selected="false" href="#" id="favorites-tab" data-bs-toggle="tab">Favorites</a>
@@ -141,12 +141,12 @@
 
   </main>
 
-  <footer class="text-muted">
+  <footer>
     <div>
       <a class="rsschool" href="https://rs.school/js/" target="_blank" rel="noreferrer"></a>
     </div>
     <div> &copy; 2021, coded by
-      <a class="link-secondary" href="https://github.com/AlexeyTeterin" target="_blank" rel="noreferrer">Alexey Teterin</a>
+      <a href="https://github.com/AlexeyTeterin" target="_blank" rel="noreferrer">Alexey Teterin</a>
     </div>
   </footer>
 </body>
