--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="shortcut icon" href="/assets/img/film.svg" type="image/svg">
   <script src="https://kit.fontawesome.com/b685af53a8.js" crossorigin="anonymous"></script>
   <script>
     const storage = JSON.parse(localStorage.VideoBox || null);
