--- a/src/index.html
+++ b/src/index.html
@@ -42,7 +42,7 @@
   </header>
 
   <main>
-    <div class="modal fade" id="modal" tabindex="-1" aria-labelledby="modalTitle" style="display: none;" aria-modal="true" role="dialog">
+    <div class="modal fade" id="movieModal" tabindex="-1" aria-labelledby="modalTitle" style="display: none;" aria-modal="true" role="dialog">
       <div class="modal-dialog">
         <div class="modal-content">
           <div class="modal-header">
