feat: done react for movieModal

--- a/src/index.html
+++ b/src/index.html
@@ -44,18 +44,7 @@
   <main>
     <div class="modal fade" id="movieModal" tabindex="-1" aria-labelledby="modalTitle" style="display: none;" aria-modal="true" role="dialog">
       <div class="modal-dialog">
-        <!-- <div class="modal-content">
-          <div class="modal-header">
-            <h5 class="modal-title" id="modalTitle">Movie Modal</h5>
-            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-          </div>
-          <div class="modal-body">
-            <p></p>
-          </div>
-          <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-          </div>
-        </div> -->
+        <!-- React MovieModal -->
       </div>
     </div>
 
